# spellbook

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO  compare.md  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: ci.yml
.helix/: config.toml
bench/: Cargo.toml  README.md
bench/src/: main.rs
benches/: check.rs  compilation.rs  conversion.rs  slice-contains.rs  suggest.rs  throughput.rs
benches/texts/: README.md  burns.txt  english.txt  french.txt
docs/: CONTRIBUTING.md  compare.md  internals.md
examples/: bench-api.rs  bench-slice-contains.rs  check.rs  flagset-len-hist.rs  load-dictionary.rs  profloop.rs  prose.rs  suggest.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: check_word.rs  parse_dictionary.rs
src/: aff.rs  checker.rs  dic.rs  hash_array_mapped_trie.rs  hash_bag.rs  hash_multi_map.rs  lib.rs  macros.rs  stdx.rs  suggester.rs  umbra_slice.rs
src/aff/: index.rs  parser.rs
src/dic/: parser.rs
src/suggester/: ngram.rs
tests/: corpus.rs  legacy.rs
tests/corpus/: base_utf.good  break.dic  breakoff.dic  opentaal_keepcase.aff  slash.dic
tests/legacy/: base_utf.dic
