[package]
name = "spellbook"
description = "A spellchecking library compatible with Hunspell dictionaries"
version = "0.0.1"
authors = ["Michael Davis <mcarsondavis@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
rust-version = "1.70"

[dependencies]
# Used for HashMap and RawTable for a custom bag structure.
hashbrown = { version = "0.14", default-features = false, features = ["raw"] }
# Used as the default BuildHasher when the `default-hasher` feature flag
# is enabled (which it is by default).
ahash = { version = "0.8", default-features = false, optional = true }

[dev-dependencies]
# Used in unit tests to lazily compile en_US. Used instead of
# `core::cell::OnceCell` since it implements `Send + Sync`.
once_cell = "1.19"
# Used in the integration tests to read Hunspell test case files, potentially
# with odd encodings.
encoding_rs = "0.8"
chardetng = "0.1"
# Minimalist benchmarking crate.
brunch = "0.5"

[features]
default = ["default-hasher"]
# Sets a default hasher (currently ahash).
default-hasher = ["dep:ahash"]
