[package]
name = "spellbook"
version = "0.3.0"
authors = ["Michael Davis <mcarsondavis@gmail.com>"]
description = "A spellchecking library compatible with Hunspell dictionaries"
readme = "README.md"
repository = "https://github.com/helix-editor/spellbook"
keywords = ["spellcheck", "no_std"]
edition = "2021"
license = "MPL-2.0"
rust-version = "1.70"

[dependencies]
# Used for HashMap and HashTable for a custom bag structure.
hashbrown = { version = "0.15", default-features = false  }
# Used as the default BuildHasher when the `default-hasher` feature flag
# is enabled (which it is by default).
foldhash = { version = "0.1.2", default-features = false, optional = true }

[dev-dependencies]
# Used in unit tests to lazily compile en_US. Used instead of
# `core::cell::OnceCell` since it implements `Send + Sync`.
once_cell = "1.19"
# Used in the integration tests to read Hunspell test case files, potentially
# with odd encodings.
encoding_rs = "0.8"
chardetng = "0.1"

[features]
default = ["default-hasher"]
# Sets a default hasher (currently foldhash).
default-hasher = ["dep:foldhash"]
