[package]
name = "spellbook"
version = "0.4.2"
authors = ["Michael Davis <mcarsondavis@gmail.com>"]
description = "A spellchecking library compatible with Hunspell dictionaries"
readme = "README.md"
repository = "https://github.com/helix-editor/spellbook"
documentation = "https://docs.rs/spellbook"
keywords = ["spellcheck", "no_std"]
categories = ["text-processing", "no-std"]
edition = "2021"
license = "MPL-2.0"
rust-version = "1.70"
exclude = [
  "/vendor",
  "/tests",
  "/benches",
  "/examples",
  "/fuzz",
  "/.github",
  "/.envrc",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Used for HashMap and HashTable for a custom bag structure.
hashbrown = { version = ">=0.15", default-features = false  }
# Used as the default BuildHasher when the `default-hasher` feature flag
# is enabled (which it is by default).
foldhash = { version = ">=0.1", default-features = false, optional = true }

[dev-dependencies]
# Used in unit tests to lazily compile en_US. Used instead of
# `core::cell::OnceCell` since it implements `Send + Sync`.
once_cell = "1.19"
# Used in the integration tests to read Hunspell test case files, potentially
# with odd encodings.
encoding_rs = "0.8"
chardetng = "0.1"
# Benchmark harness.
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[features]
default = ["default-hasher"]
# Sets a default hasher (currently foldhash).
default-hasher = ["dep:foldhash"]

# Benchmarks use the Criterion harness, so `harness = false` tells Cargo not to
# also link the libtest benchmark harness.
[[bench]]
name = "check"
harness = false

[[bench]]
name = "compilation"
harness = false

[[bench]]
name = "conversion"
harness = false

[[bench]]
name = "suggest"
harness = false

[[bench]]
name = "slice-contains"
harness = false

[[bench]]
name = "throughput"
harness = false
